--- a/1.css
+++ b/1.css
@@ -7,6 +7,7 @@
       overflow-y: scroll;
       -webkit-overflow-scrolling:touch;
     }
+    .button{cursor: pointer;}
     .iconfont{
       font-size: 22px;
     }
